# MLB-Betting

./: .gitignore  AUTOMATION_COMPLETE_REPORT.md  BETTING_DASHBOARD_COMPLETE.md  BETTING_SYSTEM_COMPLETE.md  DAILY_AUTOMATION_COMPLETE.md  DASHBOARD_ENHANCEMENT_COMPLETE.md  FRONTEND_STATUS_COMPLETE.md  HISTORICAL_FRONTEND_DUPLICATE_ISSUE_RESOLVED.md  MLB_API_INTEGRATION_README.md  MLB_SCHEDULE_ANALYSIS_REPORT.md  PITCHER_DATA_FIXED.md  PREDICTION_DATA_DISPLAY_FIX.md  Procfile  README.md  REAL_PREDICTION_ENGINE_SUCCESS_REPORT.md  RENDER_AUTO_DEPLOY_SETUP.md  RESTORATION_COMPLETE.md  RESTORATION_STATUS_REPORT.md  TIMEZONE_IMPLEMENTATION_REPORT.md  add_august_14.py  add_win_probabilities.py  analyze_cache.py  analyze_seattle_baltimore.py  api_keys_template.json  api_response_fixed.json  app.py  app_backup.py  app_clean.py  app_debug.py  app_local_only.py  app_optimized.py  app_real.py  app_self_contained.py  archaeological_treasure_fixed.json  archaeological_treasure_unified.json  auto_tbd_monitor.py  backfill_data.py  backfill_report_2025-08-13.json  backfill_report_2025-08-15.json  backfill_validation_20250813_122514.json  (+162 more)
MLB-Betting/: .gitignore  ALWAYS_RUNNING_OPTIMIZER.md  AUTO_TUNING_COMPLETE.md  DIRECT_PITCHER_FIX.md  ENGINE_ALIGNMENT_ANALYSIS.md  FUNCTIONAL_TUNING_SYSTEM.md  INTEGRATED_AUTO_TUNING_SUCCESS.md  MAIN_PAGE_FIXED.md  NO_ADMIN_SOLUTIONS.md  README.md  STATISTICS_FIXED.md  TBD_PITCHER_DEBUG.md  TUNING_SYSTEM_README.md  WORKING_URLS.md  admin_tuning.py  analyze_optimized_predictions.py  app.py  app_full_backup.py  app_minimal.py  app_temp.py  deep_debug.html  (+44 more)
(+55 files in other folders)
