[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-betting-predictions"
version = "1.0.0"
description = "MLB Betting Predictions Web Application"
requires-python = ">=3.11"
dependencies = [
    "Flask>=2.3.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "python-dateutil>=2.8.0",
    "gunicorn>=21.0.0",
    "python-dotenv>=1.0.0"
]
